# Facebook-Scraping

./: .gitignore  LISENCE.txt  README.md  facebook.py  interfaces.py  jscode.py  main.py  pyproject.toml  sources.json  utils.py
download_data/content/100064591419255/: content.json
src/facebook_scraper_vn/: _jscode.py  _utils.py  facebook_scraper.py
src/test/: main.py
